    same keys for their install bins, but at least one different value, then
    the components are installable side-by-side.
  * Troves store information about troves loaded when building a recipe
  * Build Requirements are stored with the trove 
  * Add isCollection() to TroveInfo
  * Changesets download while instals are going on
  * StreamSet.twm() respects ignoreUnknown now

Changes in 0.60.12:
  * Previously, if you ran "conary update foo", and foo requires a new
    version of bar, but updating to the new version of bar would break
    existing dependencies of other troves on the system, a very
    unuseful "Troves being removed create unresolved dependencies"
    message would be printed.  Conary now says that "Additional troves
    are needed" instead.  If --resolve is used, it will report the
    troves that have been added before displaying the dependency
    failures caused by erase.
  * Symlinks no longer confuse AutoDoc policy.
  * Autosource files which have changed confused cvc update
  * allow a \ at the end of a line in config files to do line continuations
  * several bugs in the multitag handler have been fixed

Changes in 0.60.11:
  * The '-f' flag was added to the arguments to gzip when
    recompressing compressed files
  * Added progress callbacks for uploading the changeset when cooking
  * Improved automatic mainDir detection for some corner cases.
  * Put development docs back in :devel component (they were
    inadvertantly removed from it by a previous fix).

Changes in 0.60.10:
  * BadFilenames policy absolutely prohibits filenames with newlines
    in them, no exceptions allowed.  Other similarly bad filenames may
    later be forbidden by this policy.
  * UTF8Filenames moved to packagepolicy, where it belongs, and it now
    raises an error instead of printing a warning.
  * Conary now enforces the rule that tag names must have no whitespace
    and must be all alphanumeric characters, -, or _.